first pass MovieDetail activity
added click listener to items in list view of MainActivity
clicking on an item launches an intent to DetailActivity
added logic in DetailActivity and FetchMovieDetailTask to fetch movie
data from API and display to UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Movie Listings</string>
-    <string name="rating">Rating: </string>
+    <string name="rating">Rating:</string>
+    <string name="minutes">Minutes</string>
+
+    <!--intent id-->
+    <string name="intent_movie_id" translatable="false">movie_id</string>
 </resources>
