added "purchase ticket" button to DetailActivity
clicking on the purchase ticket will launch a VIEW intent (browser)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Movie Listings</string>
     <string name="rating">Rating:</string>
     <string name="minutes">Minutes</string>
+    <string name="book_movie">Purchase Ticket</string>
 
     <!--intent id-->
     <string name="intent_movie_id" translatable="false">movie_id</string>
