--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Movie Listings</string>
-    <string name="rating">Rating:</string>
+    <string name="rating">Popularity:</string>
     <string name="minutes">Minutes</string>
     <string name="book_movie">Purchase Ticket</string>
 
